// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> Default story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--link clickable-style--brand"
  href="/"
>
  Link
</a>
`;

exports[`<Link /> Destructive story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--primary clickable-style--error"
  href="/"
>
  Link
</a>
`;

exports[`<Link /> DestructiveLeftIcon story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--primary clickable-style--error"
  href="/"
>
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-back"
    />
  </svg>
  Link
</a>
`;

exports[`<Link /> FullWidth story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand clickable-style--full-width"
  href="/"
>
  Link
</a>
`;

exports[`<Link /> IconClickableStyleIconOnly story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--icon clickable-style--brand"
  href="/"
>
  <svg
    class="icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="10"
    >
      go back
    </title>
    <use
      xlink:href="test-file-stub#arrow-back"
    />
  </svg>
</a>
`;

exports[`<Link /> IconClickableStyleIconOnlySmall story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--sm clickable-style--icon clickable-style--brand"
  href="/"
>
  <svg
    class="icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="13"
    >
      go back
    </title>
    <use
      xlink:href="test-file-stub#arrow-back"
    />
  </svg>
</a>
`;

exports[`<Link /> IconClickableStyleLeftIcon story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--icon clickable-style--brand"
  href="/"
>
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-back"
    />
  </svg>
  Link
</a>
`;

exports[`<Link /> IconClickableStyleLeftIconSmall story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--sm clickable-style--icon clickable-style--brand"
  href="/"
>
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-back"
    />
  </svg>
  Link
</a>
`;

exports[`<Link /> IconClickableStyleRightIcon story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--icon clickable-style--brand"
  href="/"
>
  Link
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-forward"
    />
  </svg>
</a>
`;

exports[`<Link /> IconClickableStyleRightIconSmall story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--sm clickable-style--icon clickable-style--brand"
  href="/"
>
  Link
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-forward"
    />
  </svg>
</a>
`;

exports[`<Link /> IconError story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--icon clickable-style--error"
  href="/"
>
  Link
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-forward"
    />
  </svg>
</a>
`;

exports[`<Link /> IconNeutral story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral"
  href="/"
>
  Link
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-forward"
    />
  </svg>
</a>
`;

exports[`<Link /> IconSuccess story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--icon clickable-style--success"
  href="/"
>
  Link
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-forward"
    />
  </svg>
</a>
`;

exports[`<Link /> IconWarning story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--icon clickable-style--warning"
  href="/"
>
  Link
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-forward"
    />
  </svg>
</a>
`;

exports[`<Link /> LinkError story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--link clickable-style--error"
  href="/"
>
  Link
</a>
`;

exports[`<Link /> LinkNeutral story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--link clickable-style--neutral"
  href="/"
>
  Link
</a>
`;

exports[`<Link /> LinkRightIcon story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--link clickable-style--brand"
  href="/"
>
  Link
  <svg
    class="icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="1"
    >
      opens in a new tab
    </title>
    <use
      xlink:href="test-file-stub#open-in-new"
    />
  </svg>
</a>
`;

exports[`<Link /> LinkSuccess story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--link clickable-style--success"
  href="/"
>
  Link
</a>
`;

exports[`<Link /> LinkWarning story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--link clickable-style--warning"
  href="/"
>
  Link
</a>
`;

exports[`<Link /> Primary story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--primary clickable-style--brand"
  href="/"
>
  Link
</a>
`;

exports[`<Link /> PrimaryLeftIcon story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--primary clickable-style--brand"
  href="/"
>
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-back"
    />
  </svg>
  Link
</a>
`;

exports[`<Link /> PrimaryMedium story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--md clickable-style--primary clickable-style--brand"
  href="/"
>
  Link
</a>
`;

exports[`<Link /> PrimaryRightIcon story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--primary clickable-style--brand"
  href="/"
>
  Link
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-forward"
    />
  </svg>
</a>
`;

exports[`<Link /> PrimarySmall story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--sm clickable-style--primary clickable-style--brand"
  href="/"
>
  Link
</a>
`;

exports[`<Link /> Secondary story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand"
  href="/"
>
  Link
</a>
`;

exports[`<Link /> SecondaryError story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--error"
  href="/"
>
  Link
</a>
`;

exports[`<Link /> SecondaryLeftIcon story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand"
  href="/"
>
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-back"
    />
  </svg>
  Link
</a>
`;

exports[`<Link /> SecondaryMedium story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--md clickable-style--secondary clickable-style--brand"
  href="/"
>
  Link
</a>
`;

exports[`<Link /> SecondaryRightIcon story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand"
  href="/"
>
  Link
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-forward"
    />
  </svg>
</a>
`;

exports[`<Link /> SecondarySmall story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--sm clickable-style--secondary clickable-style--brand"
  href="/"
>
  Link
</a>
`;

exports[`<Link /> SecondarySuccess story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--success"
  href="/"
>
  Link
</a>
`;

exports[`<Link /> SecondaryWarning story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--warning"
  href="/"
>
  Link
</a>
`;

exports[`<Link /> Tertiary story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--neutral"
  href="/"
>
  Link
</a>
`;

exports[`<Link /> TertiaryLeftIcon story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--neutral"
  href="/"
>
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-back"
    />
  </svg>
  Link
</a>
`;

exports[`<Link /> TertiaryMedium story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--md clickable-style--secondary clickable-style--neutral"
  href="/"
>
  Link
</a>
`;

exports[`<Link /> TertiaryRightIcon story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--neutral"
  href="/"
>
  Link
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-forward"
    />
  </svg>
</a>
`;

exports[`<Link /> TertiarySmall story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--sm clickable-style--secondary clickable-style--neutral"
  href="/"
>
  Link
</a>
`;

exports[`<Link /> passes class names down properly 1`] = `
<a
  class="clickable-style exampleClassName clickable-style--link clickable-style--brand"
  data-testid="example-class-name"
  href="/"
>
  Click
</a>
`;

exports[`<Link /> passes test ids down properly 1`] = `
<a
  class="clickable-style clickable-style--link clickable-style--brand"
  data-testid="example-test-id"
  href="/"
>
  Click
</a>
`;
